--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="%PUBLIC_URL%/logo.png"
     />
-    <title>Marco Ávila - Full Stack Developer</title>
+    <title>Marco Ávila - Frontend Developer</title>
     <meta
       name="description"
-      content="Fullstack developer based in Faro,
+      content="Frontend developer based in Faro,
     Portugal. Passionate about technology and at the moment i am learning how to
-    code."
+    code. I can give a new look to your UI or create applications according to your needs."
     />
+    <meta name="author" content="Marco Ávila">
+    <meta name="keywords" content="marco avila, faro, olhao, olhão, fuseta, fuzeta, create website, web developer, website builder, web design, website, criar website, design website, frontend developer, criar website, design website, aplicações, aplicacoes, websites, developer, front end developer, digital marketing, seo, seo website, ecommerce, e-commerce, freelance, criar aplicação, website design, design website, build website, web development">
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap"
       rel="stylesheet"
